# rust-api

./: .env.example  .env.production  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf  prometheus.yml
config/: development.yaml  production.yaml
crates/api/: Cargo.toml
crates/api/src/: main.rs  state.rs
crates/api/src/handlers/: auth.rs  enterprise.rs  health.rs  metrics.rs  mod.rs  products.rs  users.rs
crates/api/src/middleware/: auth.rs  enterprise.rs  metrics.rs  mod.rs
crates/api/src/routes/: auth.rs  enterprise.rs  mod.rs  products.rs  users.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  models.rs  service.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  enterprise.rs  error.rs  lib.rs  models.rs  traits.rs
crates/database/: Cargo.toml
crates/database/migrations/: 003_enterprise_features.sql
crates/database/src/: lib.rs  pool.rs
crates/database/src/repositories/: mod.rs  product_repository.rs  user_repository.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: audit.rs  circuit_breaker.rs  feature_flags.rs  lib.rs  service.rs  tracing_config.rs
migrations/: 001_create_users.sql  002_create_products.sql  003_enterprise_features.sql
