[package]
name = "scalable-rust-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/database",
    "crates/auth",
    "crates/monitoring"
]
resolver = "2"

# Specify the main binary
[[bin]]
name = "api"
path = "crates/api/src/main.rs"

[workspace.dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Monitoring & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
time = { version = "0.3", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Testing
mockall = "0.12"
