[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/database",
    "crates/auth",
    "crates/monitoring"
]
resolver = "2"

[workspace.dependencies]
# Web framework
axum = "0.7"
tower = { version = "0.4" }
tower-http = { version="0.5", features = ["compression-full", "cors", "trace"] }

hyper = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "ipnetwork"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Monitoring & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
time = { version = "0.3", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Testing
mockall = "0.12"
