[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
core = { path = "../core" }
database = { path = "../database" }
auth = { path = "../auth" }
monitoring = { path = "../monitoring" }

# External dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
governor = { workspace = true }
metrics = { workspace = true }
time = { workspace = true }
