[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
app_core = { path = "../core" }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
