[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
core = { path = "../core" }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
rand = "0.8"
